<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_COM" Id="{cd596418-8e0a-453c-867e-618b97030684}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_COM
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Instanitate Serial port com function *) 
fbSerialLineControl_CVMI_CATCH_PTM_01(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn_CVMI_CATCH_PTM_01),
	pComOut:=ADR(stComOut_CVMI_CATCH_PTM_01),
	SizeComIn:= SIZEOF(stComIn_CVMI_CATCH_PTM_01),
	TxBuffer:= SerialTXBuffer_CVMI_CATCH_PTM_01,
	RxBuffer:= SerialRXBuffer_CVMI_CATCH_PTM_01,
	Error=> ,
	ErrorID=> );
	
fbSerialLineControl_CVMI_ROUGH_PTM_01(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn_CVMI_ROUGH_PTM_01),
	pComOut:=ADR(stComOut_CVMI_ROUGH_PTM_01),
	SizeComIn:= SIZEOF(stComIn_CVMI_ROUGH_PTM_01),
	TxBuffer:= SerialTXBuffer_CVMI_ROUGH_PTM_01,
	RxBuffer:= SerialRXBuffer_CVMI_ROUGH_PTM_01,
	Error=> ,
	ErrorID=> );
	
fbSerialLineControl_CVMI_KTOF_PTM_01(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn_CVMI_KTOF_PTM_01),
	pComOut:=ADR(stComOut_CVMI_KTOF_PTM_01),
	SizeComIn:= SIZEOF(stComIn_CVMI_KTOF_PTM_01),
	TxBuffer:= SerialTXBuffer_CVMI_KTOF_PTM_01,
	RxBuffer:= SerialRXBuffer_CVMI_KTOF_PTM_01,
	Error=> ,
	ErrorID=> );
	
fbSerialLineControl_CVMI_KTOF_PTM_02(
	Mode:= SERIALLINEMODE_EL6_22B,
	pComIn:= ADR(stComIn_CVMI_KTOF_PTM_02),
	pComOut:=ADR(stComOut_CVMI_KTOF_PTM_02),
	SizeComIn:= SIZEOF(stComIn_CVMI_KTOF_PTM_02),
	TxBuffer:= SerialTXBuffer_CVMI_KTOF_PTM_02,
	RxBuffer:= SerialRXBuffer_CVMI_KTOF_PTM_02,
	Error=> ,
	ErrorID=> );
	]]></ST>
    </Implementation>
    <LineIds Name="PRG_COM">
      <LineId Id="3" Count="39" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>